# setup.py configuration file
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = sof_wrapper
version = attr: setuptools_scm.get_version

[options]
packages = sof_wrapper
zip_safe = False
include_package_data = True
setup_requires =
    setuptools_scm

# abstract requirements;
# concrete requirements belong in requirements.txt
# https://caremad.io/posts/2013/07/setup-vs-requirement/
install_requires =
    authlib
    flask
    pytest
    python-jose[cryptography]
    python-json-logger
    requests

[options.extras_require]
dev =
    pytest
    tox

[tool:pytest]
addopts = --color yes --verbose
console_output_style = classic
filterwarnings =
    # only print each warning once per module
    module

    # error on bad assertions
    error:.*assertion is always true.*
